fix spacing issue with MVDSM and footer with (max-width: 397px) and (min-width: 374px)

--- a/src/splashcomponents/splash.css
+++ b/src/splashcomponents/splash.css
@@ -4775,7 +4775,7 @@
         display: grid;
         background: linear-gradient(180deg, #2C3043 63.35%, #0CA678 90.35%);
         grid-template-columns: repeat(8, 1fr);
-        grid-template-rows: repeat(25, 5vw);
+        grid-template-rows: repeat(27, 5vw);
         grid-gap: 20px;
     }
 
@@ -4815,13 +4815,13 @@
 
     .MVDSMGraphContainer {
         grid-column: 1 / 9;
-        grid-row: 16 / 23;
+        grid-row: 17 / 24;
     }
 
     .footerContainer {
         background-color: #25283B;
         grid-column: 1 / -1;
-        grid-row: 22 / 26;
+        grid-row: 24 / 28;
         padding-top: 5px;
     }
 
